--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
